--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>JAVA </h1>
+    <h1>JAVA</h1>
+    <span id="text">haiiiiiiiiiiii</span>
+
     <script src="./script.js"></script>
 </body>
 </html>
